fix(frontend): fix slider of templates on mobile view cy-404

--- a/apps/frontend/src/pages/home/components/visual-layouts/styles.module.css
+++ b/apps/frontend/src/pages/home/components/visual-layouts/styles.module.css
@@ -88,3 +88,9 @@
 	pointer-events: none;
 	transform: translate(-120%, -170%);
 }
+
+@media (width <= 600px) {
+	.layout-list {
+		justify-content: flex-start;
+	}
+}
